add get player points
